--- a/aboutus.html
+++ b/aboutus.html
@@ -12,7 +12,8 @@
             }
 
             body {
-                background-color: rgb(73, 73, 255);
+                /* background-color: rgb(73, 73, 255); */
+                background: linear-gradient(to right, blue, pink);
                 /* ----------------- */
                 text-align: center;
             }
@@ -73,7 +74,7 @@
 
             .icons {
                 padding: 10px;
-                border: 1px solid black;
+                /* border: 1px solid black; */
             }
 
             .logo {
@@ -83,9 +84,9 @@
                 padding-top: 5px;
                 padding-bottom: 5px;
                 justify-content: space-between;
-                border: 1px solid black;
+                /* border: 1px solid black; */
                 cursor: pointer;
-                color:blue;
+                color: blue;
             }
 
             /* -------------------------------- */
@@ -137,16 +138,18 @@
                                     alt="fblogo"
                                     class="logo"
                             /></a>
-                            <img
-                                src="instagram.png"
-                                alt="instalogo"
-                                class="logo"
-                            />
-                            <img
-                                src="linkedin.png"
-                                alt="linkedInlogo"
-                                class="logo"
-                            />
+                            <a href="#">
+                                <img
+                                    src="instagram.png"
+                                    alt="instalogo"
+                                    class="logo"
+                            /></a>
+                            <a href="#"
+                                ><img
+                                    src="linkedin.png"
+                                    alt="linkedInlogo"
+                                    class="logo"
+                            /></a>
                         </div>
                     </div>
                 </div>
@@ -165,17 +168,24 @@
                             elit. Sint saepe
                         </p>
                         <div class="icons">
-                            <img src="facebook.png" alt="fblogo" class="logo" />
-                            <img
-                                src="instagram.png"
-                                alt="instalogo"
-                                class="logo"
-                            />
-                            <img
-                                src="linkedin.png"
-                                alt="linkedInlogo"
-                                class="logo"
-                            />
+                            <a href="#">
+                                <img
+                                    src="facebook.png"
+                                    alt="fblogo"
+                                    class="logo"
+                            /></a>
+                            <a href="#">
+                                <img
+                                    src="instagram.png"
+                                    alt="instalogo"
+                                    class="logo"
+                            /></a>
+                            <a href="#">
+                                <img
+                                    src="linkedin.png"
+                                    alt="linkedInlogo"
+                                    class="logo"
+                            /></a>
                         </div>
                     </div>
                 </div>
@@ -194,17 +204,24 @@
                             elit. Sint saepe
                         </p>
                         <div class="icons">
-                            <img src="facebook.png" alt="fblogo" class="logo" />
-                            <img
-                                src="instagram.png"
-                                alt="instalogo"
-                                class="logo"
-                            />
-                            <img
-                                src="linkedin.png"
-                                alt="linkedInlogo"
-                                class="logo"
-                            />
+                            <a href="#">
+                                <img
+                                    src="facebook.png"
+                                    alt="fblogo"
+                                    class="logo"
+                            /></a>
+                            <a href="#">
+                                <img
+                                    src="instagram.png"
+                                    alt="instalogo"
+                                    class="logo"
+                            /></a>
+                            <a href="#"
+                                ><img
+                                    src="linkedin.png"
+                                    alt="linkedInlogo"
+                                    class="logo"
+                            /></a>
                         </div>
                     </div>
                 </div>
@@ -223,17 +240,24 @@
                             elit. Sint saepe
                         </p>
                         <div class="icons">
-                            <img src="facebook.png" alt="fblogo" class="logo" />
-                            <img
-                                src="instagram.png"
-                                alt="instalogo"
-                                class="logo"
-                            />
-                            <img
-                                src="linkedin.png"
-                                alt="linkedInlogo"
-                                class="logo"
-                            />
+                            <a href="#">
+                                <img
+                                    src="facebook.png"
+                                    alt="fblogo"
+                                    class="logo"
+                            /></a>
+                            <a href="#">
+                                <img
+                                    src="instagram.png"
+                                    alt="instalogo"
+                                    class="logo"
+                            /></a>
+                            <a href="#">
+                                <img
+                                    src="linkedin.png"
+                                    alt="linkedInlogo"
+                                    class="logo"
+                            /></a>
                         </div>
                     </div>
                 </div>
@@ -252,17 +276,24 @@
                             elit. Sint saepe
                         </p>
                         <div class="icons">
-                            <img src="facebook.png" alt="fblogo" class="logo" />
-                            <img
-                                src="instagram.png"
-                                alt="instalogo"
-                                class="logo"
-                            />
-                            <img
-                                src="linkedin.png"
-                                alt="linkedInlogo"
-                                class="logo"
-                            />
+                            <a href="#">
+                                <img
+                                    src="facebook.png"
+                                    alt="fblogo"
+                                    class="logo"
+                            /></a>
+                            <a href="#">
+                                <img
+                                    src="instagram.png"
+                                    alt="instalogo"
+                                    class="logo"
+                            /></a>
+                            <a href="#">
+                                <img
+                                    src="linkedin.png"
+                                    alt="linkedInlogo"
+                                    class="logo"
+                            /></a>
                         </div>
                     </div>
                 </div>
@@ -281,17 +312,24 @@
                             elit. Sint saepe
                         </p>
                         <div class="icons">
-                            <img src="facebook.png" alt="fblogo" class="logo" />
-                            <img
-                                src="instagram.png"
-                                alt="instalogo"
-                                class="logo"
-                            />
-                            <img
-                                src="linkedin.png"
-                                alt="linkedInlogo"
-                                class="logo"
-                            />
+                            <a href="#">
+                                <img
+                                    src="facebook.png"
+                                    alt="fblogo"
+                                    class="logo"
+                            /></a>
+                            <a href="#">
+                                <img
+                                    src="instagram.png"
+                                    alt="instalogo"
+                                    class="logo"
+                            /></a>
+                            <a href="#"
+                                ><img
+                                    src="linkedin.png"
+                                    alt="linkedInlogo"
+                                    class="logo"
+                            /></a>
                         </div>
                     </div>
                 </div>
@@ -310,17 +348,24 @@
                             elit. Sint saepe
                         </p>
                         <div class="icons">
-                            <img src="facebook.png" alt="fblogo" class="logo" />
-                            <img
-                                src="instagram.png"
-                                alt="instalogo"
-                                class="logo"
-                            />
-                            <img
-                                src="linkedin.png"
-                                alt="linkedInlogo"
-                                class="logo"
-                            />
+                            <a href="#">
+                                <img
+                                    src="facebook.png"
+                                    alt="fblogo"
+                                    class="logo"
+                            /></a>
+                            <a href="#">
+                                <img
+                                    src="instagram.png"
+                                    alt="instalogo"
+                                    class="logo"
+                            /></a>
+                            <a href="#"
+                                ><img
+                                    src="linkedin.png"
+                                    alt="linkedInlogo"
+                                    class="logo"
+                            /></a>
                         </div>
                     </div>
                 </div>
@@ -339,17 +384,24 @@
                             elit. Sint saepe
                         </p>
                         <div class="icons">
-                            <img src="facebook.png" alt="fblogo" class="logo" />
-                            <img
-                                src="instagram.png"
-                                alt="instalogo"
-                                class="logo"
-                            />
-                            <img
-                                src="linkedin.png"
-                                alt="linkedInlogo"
-                                class="logo"
-                            />
+                            <a href="#">
+                                <img
+                                    src="facebook.png"
+                                    alt="fblogo"
+                                    class="logo"
+                            /></a>
+                            <a href="#">
+                                <img
+                                    src="instagram.png"
+                                    alt="instalogo"
+                                    class="logo"
+                            /></a>
+                            <a href="#">
+                                <img
+                                    src="linkedin.png"
+                                    alt="linkedInlogo"
+                                    class="logo"
+                            /></a>
                         </div>
                     </div>
                 </div>
@@ -368,17 +420,24 @@
                             elit. Sint saepe
                         </p>
                         <div class="icons">
-                            <img src="facebook.png" alt="fblogo" class="logo" />
-                            <img
-                                src="instagram.png"
-                                alt="instalogo"
-                                class="logo"
-                            />
-                            <img
-                                src="linkedin.png"
-                                alt="linkedInlogo"
-                                class="logo"
-                            />
+                            <a href="#">
+                                <img
+                                    src="facebook.png"
+                                    alt="fblogo"
+                                    class="logo"
+                            /></a>
+                            <a href="#"
+                                ><img
+                                    src="instagram.png"
+                                    alt="instalogo"
+                                    class="logo"
+                            /></a>
+                            <a href="#">
+                                <img
+                                    src="linkedin.png"
+                                    alt="linkedInlogo"
+                                    class="logo"
+                            /></a>
                         </div>
                     </div>
                 </div>
