--- a/aboutus.html
+++ b/aboutus.html
@@ -24,6 +24,20 @@
                 border: 1px solid white;
             }
 
+            .teach{
+                margin-top: 70px;
+            }
+
+            .teach-card{
+                margin: 0 auto;
+                background-color: cornsilk;
+                border: none;
+                box-shadow: 2px 2px 6px 0px rgba(128, 19, 19, 0.3);
+                border-radius: 20px; 
+                width: 250px;
+                transition: transform 0.3s;
+            }
+
             .container-cards {
                 margin: 80px;
                 display: grid;
@@ -48,9 +62,9 @@
                 box-shadow: 2px 2px 6px 0px rgba(128, 19, 19, 0.3);
             }
 
-            .container-card > img {
+            /* .container-card > img  */
+            .mypic{
                 height: 150px;
-                /* width: 50%; */
                 border-radius: 50%;
             }
 
@@ -115,6 +129,46 @@
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
 
+            <div class="teach">
+
+                <!--Special Card  starts here-->
+
+                <div class="teach-card">
+                   
+                    <img src="./aboutus-img/pic2.jpg" alt="pic1" class="mypic"/>
+                    <div class="container-textarea">
+                        <h3>Card1</h3>
+                        <h4>Teacher Mentor</h4>
+                        <p>
+                            Lorem ipsum dolor sit, amet consectetur adipisicing
+                            elit. Sint saepe
+                        </p>
+                        <div class="icons">
+                            <a href="#"
+                                ><img
+                                    src="./aboutus-img/facebook.png"
+                                    alt="fblogo"
+                                    class="logo"
+                            /></a>
+                            <a href="#">
+                                <img
+                                    src="./aboutus-img/instagram.png"
+                                    alt="instalogo"
+                                    class="logo"
+                            /></a>
+                            <a href="#"
+                                ><img
+                                    src="./aboutus-img/linkedin.png"
+                                    alt="linkedInlogo"
+                                    class="logo"
+                            /></a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Special Card  ends here-->
+            </div>
+
             <!-- heading ends  -->
 
             <!-- container card ends here  -->
@@ -123,7 +177,7 @@
                 <!-- Card 1 starts here-->
 
                 <div class="container-card">
-                    <img src="pic2.jpg" alt="pic1" />
+                    <img src="./aboutus-img/pic2.jpg" alt="pic1" class="mypic"/>
                     <div class="container-textarea">
                         <h3>Card1</h3>
                         <h4>Team member</h4>
@@ -134,19 +188,19 @@
                         <div class="icons">
                             <a href="#"
                                 ><img
-                                    src="facebook.png"
+                                    src="./aboutus-img/facebook.png"
                                     alt="fblogo"
                                     class="logo"
                             /></a>
                             <a href="#">
                                 <img
-                                    src="instagram.png"
+                                    src="./aboutus-img/instagram.png"
                                     alt="instalogo"
                                     class="logo"
                             /></a>
                             <a href="#"
                                 ><img
-                                    src="linkedin.png"
+                                    src="./aboutus-img/linkedin.png"
                                     alt="linkedInlogo"
                                     class="logo"
                             /></a>
@@ -159,7 +213,7 @@
                 <!-- Card 2 starts here-->
 
                 <div class="container-card">
-                    <img src="pic2.jpg" alt="pic1" />
+                    <img src="./aboutus-img/pic2.jpg" alt="pic1" class="mypic"/>
                     <div class="container-textarea">
                         <h3>Card1</h3>
                         <h4>Team member</h4>
@@ -170,19 +224,19 @@
                         <div class="icons">
                             <a href="#">
                                 <img
-                                    src="facebook.png"
+                                    src="./aboutus-img/facebook.png"
                                     alt="fblogo"
                                     class="logo"
                             /></a>
                             <a href="#">
                                 <img
-                                    src="instagram.png"
+                                    src="./aboutus-img/instagram.png"
                                     alt="instalogo"
                                     class="logo"
                             /></a>
                             <a href="#">
                                 <img
-                                    src="linkedin.png"
+                                    src="./aboutus-img/linkedin.png"
                                     alt="linkedInlogo"
                                     class="logo"
                             /></a>
@@ -195,7 +249,7 @@
                 <!-- Card 3 starts here-->
 
                 <div class="container-card">
-                    <img src="pic2.jpg" alt="pic1" />
+                    <img src="./aboutus-img/pic2.jpg" alt="pic1" class="mypic"/>
                     <div class="container-textarea">
                         <h3>Card1</h3>
                         <h4>Team member</h4>
@@ -206,19 +260,19 @@
                         <div class="icons">
                             <a href="#">
                                 <img
-                                    src="facebook.png"
+                                    src="./aboutus-img/facebook.png"
                                     alt="fblogo"
                                     class="logo"
                             /></a>
                             <a href="#">
                                 <img
-                                    src="instagram.png"
+                                    src="./aboutus-img/instagram.png"
                                     alt="instalogo"
                                     class="logo"
                             /></a>
                             <a href="#"
                                 ><img
-                                    src="linkedin.png"
+                                    src="./aboutus-img/linkedin.png"
                                     alt="linkedInlogo"
                                     class="logo"
                             /></a>
@@ -231,7 +285,7 @@
                 <!-- Card 4 starts here-->
 
                 <div class="container-card">
-                    <img src="pic2.jpg" alt="pic1" />
+                    <img src="./aboutus-img/pic2.jpg" alt="pic1" class="mypic"/>
                     <div class="container-textarea">
                         <h3>Card1</h3>
                         <h4>Team member</h4>
@@ -242,19 +296,19 @@
                         <div class="icons">
                             <a href="#">
                                 <img
-                                    src="facebook.png"
+                                    src="./aboutus-img/facebook.png"
                                     alt="fblogo"
                                     class="logo"
                             /></a>
                             <a href="#">
                                 <img
-                                    src="instagram.png"
+                                    src="./aboutus-img/instagram.png"
                                     alt="instalogo"
                                     class="logo"
                             /></a>
                             <a href="#">
                                 <img
-                                    src="linkedin.png"
+                                    src="./aboutus-img/linkedin.png"
                                     alt="linkedInlogo"
                                     class="logo"
                             /></a>
@@ -267,7 +321,7 @@
                 <!-- Card 5 starts here-->
 
                 <div class="container-card">
-                    <img src="pic2.jpg" alt="pic1" />
+                    <img src="./aboutus-img/pic2.jpg" alt="pic1" class="mypic"/>
                     <div class="container-textarea">
                         <h3>Card1</h3>
                         <h4>Team member</h4>
@@ -278,19 +332,19 @@
                         <div class="icons">
                             <a href="#">
                                 <img
-                                    src="facebook.png"
+                                    src="./aboutus-img/facebook.png"
                                     alt="fblogo"
                                     class="logo"
                             /></a>
                             <a href="#">
                                 <img
-                                    src="instagram.png"
+                                    src="./aboutus-img/instagram.png"
                                     alt="instalogo"
                                     class="logo"
                             /></a>
                             <a href="#">
                                 <img
-                                    src="linkedin.png"
+                                    src="./aboutus-img/linkedin.png"
                                     alt="linkedInlogo"
                                     class="logo"
                             /></a>
@@ -303,7 +357,7 @@
                 <!-- Card 6 starts here-->
 
                 <div class="container-card">
-                    <img src="pic2.jpg" alt="pic1" />
+                    <img src="./aboutus-img/pic2.jpg" alt="pic1" class="mypic"/>
                     <div class="container-textarea">
                         <h3>Card1</h3>
                         <h4>Team member</h4>
@@ -314,19 +368,19 @@
                         <div class="icons">
                             <a href="#">
                                 <img
-                                    src="facebook.png"
+                                    src="./aboutus-img/facebook.png"
                                     alt="fblogo"
                                     class="logo"
                             /></a>
                             <a href="#">
                                 <img
-                                    src="instagram.png"
+                                    src="./aboutus-img/instagram.png"
                                     alt="instalogo"
                                     class="logo"
                             /></a>
                             <a href="#"
                                 ><img
-                                    src="linkedin.png"
+                                    src="./aboutus-img/linkedin.png"
                                     alt="linkedInlogo"
                                     class="logo"
                             /></a>
@@ -339,7 +393,7 @@
                 <!-- Card 7 starts here-->
 
                 <div class="container-card">
-                    <img src="pic2.jpg" alt="pic1" />
+                    <img src="./aboutus-img/pic2.jpg" alt="pic1" class="mypic"/>
                     <div class="container-textarea">
                         <h3>Card1</h3>
                         <h4>Team member</h4>
@@ -350,19 +404,19 @@
                         <div class="icons">
                             <a href="#">
                                 <img
-                                    src="facebook.png"
+                                    src="./aboutus-img/facebook.png"
                                     alt="fblogo"
                                     class="logo"
                             /></a>
                             <a href="#">
                                 <img
-                                    src="instagram.png"
+                                    src="./aboutus-img/instagram.png"
                                     alt="instalogo"
                                     class="logo"
                             /></a>
                             <a href="#"
                                 ><img
-                                    src="linkedin.png"
+                                    src="./aboutus-img/linkedin.png"
                                     alt="linkedInlogo"
                                     class="logo"
                             /></a>
@@ -375,7 +429,7 @@
                 <!-- Card 8 starts here-->
 
                 <div class="container-card">
-                    <img src="pic2.jpg" alt="pic1" />
+                    <img src="./aboutus-img/pic2.jpg" alt="pic1" class="mypic"/>
                     <div class="container-textarea">
                         <h3>Card1</h3>
                         <h4>Team member</h4>
@@ -386,19 +440,19 @@
                         <div class="icons">
                             <a href="#">
                                 <img
-                                    src="facebook.png"
+                                    src="./aboutus-img/facebook.png"
                                     alt="fblogo"
                                     class="logo"
                             /></a>
                             <a href="#">
                                 <img
-                                    src="instagram.png"
+                                    src="./aboutus-img/instagram.png"
                                     alt="instalogo"
                                     class="logo"
                             /></a>
                             <a href="#">
                                 <img
-                                    src="linkedin.png"
+                                    src="./aboutus-img/linkedin.png"
                                     alt="linkedInlogo"
                                     class="logo"
                             /></a>
@@ -411,7 +465,7 @@
                 <!-- Card 9 starts here-->
 
                 <div class="container-card">
-                    <img src="pic2.jpg" alt="pic1" />
+                    <img src="./aboutus-img/pic2.jpg" alt="pic1" class="mypic"/>
                     <div class="container-textarea">
                         <h3>Card1</h3>
                         <h4>Team member</h4>
@@ -422,19 +476,19 @@
                         <div class="icons">
                             <a href="#">
                                 <img
-                                    src="facebook.png"
+                                    src="./aboutus-img/facebook.png"
                                     alt="fblogo"
                                     class="logo"
                             /></a>
                             <a href="#"
                                 ><img
-                                    src="instagram.png"
+                                    src="./aboutus-img/instagram.png"
                                     alt="instalogo"
                                     class="logo"
                             /></a>
                             <a href="#">
                                 <img
-                                    src="linkedin.png"
+                                    src="./aboutus-img/linkedin.png"
                                     alt="linkedInlogo"
                                     class="logo"
                             /></a>
