--- a/aboutus.html
+++ b/aboutus.html
@@ -13,7 +13,7 @@
 
             body {
                 /* background-color: rgb(73, 73, 255); */
-                background: linear-gradient(to right, blue, pink);
+                background: linear-gradient(to right, blue, rgb(65, 0, 0));
                 /* ----------------- */
                 text-align: center;
             }
@@ -30,12 +30,7 @@
 
             .teach-card{
                 margin: 0 auto;
-                background-color: cornsilk;
-                border: none;
-                box-shadow: 2px 2px 6px 0px rgba(128, 19, 19, 0.3);
-                border-radius: 20px; 
-                width: 250px;
-                transition: transform 0.3s;
+              
             }
 
             .container-cards {
@@ -46,18 +41,16 @@
                 align-items: center;
             }
 
-            .container-card {
+            .container-card , .teach-card{
                 background-color: cornsilk;
                 border: none;
                 box-shadow: 2px 2px 6px 0px rgba(128, 19, 19, 0.3);
                 border-radius: 20px;
-                /* -------------------- */
-                /* text-align: center; */
                 width: 250px;
                 transition: transform 0.3s;
             }
 
-            .container-card:hover {
+            .container-card:hover ,.teach-card:hover{
                 transform: translateY(5px);
                 box-shadow: 2px 2px 6px 0px rgba(128, 19, 19, 0.3);
             }
